[package]
name = "auth-onsocial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.12.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5.7"
near-sdk-macros = "5.12.0"

[dev-dependencies]
near-sdk = { version = "5.12.0", features = ["unit-testing"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
debug = false